[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastblog"
version = "0.4.26.0610"
description = "A modern, high-performance blog platform built with FastAPI and Astro"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "FastBlog Team", email = "team@fastblog.dev" },
]
keywords = ["blog", "cms", "fastapi", "astro", "headless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Athenavi/fast_blog"
Documentation = "https://github.com/Athenavi/fast_blog/tree/main/docs"
Repository = "https://github.com/Athenavi/fast_blog"
Issues = "https://github.com/Athenavi/fast_blog/issues"
Changelog = "https://github.com/Athenavi/fast_blog/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.24",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "pip-audit>=2.6",
    "bandit>=1.7",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src", "shared"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
